--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,20 +4,24 @@
         <h1>KPJ</h1>
         <div class="pages">
 
-            <a>
+            <a routerLink="/">
                 Home
             </a>
 
 
-            <a>
-                Blog
-            </a>
-
-            <a>
+            <a routerLink="/about">
                 About
             </a>
 
-            <a>
+            <a routerLink="/projects">
+                Projects
+            </a>
+
+            <a routerLink="/useful-links">
+                Useful Links
+            </a>
+
+            <a routerLink="/contact-me">
                 Contact Me
             </a>
 
