--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,11 +1,12 @@
 .navbar {
-    margin-top: 0.5%;
+    margin-top: 1%;
     backdrop-filter: blur(10px);
     display: flex;
     flex-direction: row;
     font-size: 1.3em;
     justify-content: space-around;
     position: fixed;
+    z-index: 1000;
     padding-top: 15px;
     padding-bottom: 10px;
     height: 30px;
@@ -33,20 +34,33 @@
 
 
 .pages {
+    gap: 30px;
     display: flex;
-    gap: 20px;
     margin-right: 20px;
 
 }
 
 .pages a {
+    cursor: pointer;
     font-weight: 500;
+    position: relative;
     text-decoration: none;
     color: #424655;
 }
 
-.pages a.dark {
-    color: white;
+.pages a::after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 3px;
+    background-color: #3b7aa2;
+    bottom: -5px;
+    left: 0px;
+    transition: width 0.3s ease-in-out;
+}
+
+.pages a:hover::after {
+    width: 100%;
 }
 
 .content {
@@ -72,7 +86,7 @@
 
     .pages {
         margin-right: 10px;
-        /* Adjust margin */
+        gap: 20px;
     }
 
 
@@ -94,6 +108,7 @@
     }
 
     .pages {
+        gap: 20px;
         margin-right: 5px;
         /* Further adjust margin */
     }
