--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class='navbar'>
 
     <div class='main-part'>
-        <h1>KPJ</h1>
+        <h1>KAM</h1>
         <div class="pages">
 
             <a routerLink="/">
