--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,13 +3,13 @@
         <span>© 2024 | Developed by Kam with <span class="heart">❤️</span></span>
     </div>
     <div class="footer-right">
-        <a href="https://www.linkedin.com">
+        <a href="https://www.linkedin.com/in/erkamyaman35/">
             <i class="pi pi-linkedin"></i>
         </a>
-        <a href="https://www.github.com">
+        <a href="https://github.com/yamanerkam">
             <i class="pi pi-github"></i>
         </a>
-        <a href="mailto:example@example.com">
+        <a href="mailto:erkamyaman35@gmail.com">
             <i class="pi pi-envelope"></i>
         </a>
         <a href="https://twitter.com">
