contact-me-card

--- a/src/app/pages/contact-me/contact-me.component.html
+++ b/src/app/pages/contact-me/contact-me.component.html
@@ -1,1 +1,43 @@
-<p>contact-me works!</p>
+<div class="card">
+    <p-card [style]="{ border:'2px solid #3b7aa2',width: '650px',display:'flex', flexDirection:'column'}">
+        <div class="header">
+            <img class="picture" alt="Card" [src]="photoURl" />
+        </div>
+        <div class="name">
+            <h1>
+                < Erkam Yaman />
+            </h1>
+            <p>COMPUTER ENGINEER</p>
+        </div>
+        <div class="links">
+            <a target="_blank" href="https://www.linkedin.com/in/erkamyaman35/">
+                <i class="pi pi-linkedin"></i>
+            </a>
+            <a target="_blank" href="https://github.com/yamanerkam">
+                <i class="pi pi-github"></i>
+            </a>
+            <a target="_blank" href="mailto:erkamyaman35@gmail.com">
+                <i class="pi pi-envelope"></i>
+            </a>
+            <a target="_blank" href="https://twitter.com">
+                <i class="pi pi-twitter"></i>
+            </a>
+        </div>
+        <div class="last-paragraph">
+            <p>
+                I'm always happy to collaborate on new projects and explore innovative
+                solutions. If you're looking for a dedicated software developer to bring your
+                ideas to life, let's arrange a call. Let's discuss how
+                <span class="blue">we can work together to achieve your goals</span>.
+            </p>
+        </div>
+        <div class="button-wrapper">
+
+            <button>
+                <a target="_blank" style="text-decoration: none; color: inherit;"
+                    href="https://www.linkedin.com/in/erkamyaman35/">> DM me on LinkedIn</a>
+            </button>
+        </div>
+
+    </p-card>
+</div>
