--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,18 +1,18 @@
 <footer class="footer">
     <div class="footer-left">
-        <span>© 2024 | Developed by Kam with <span class="heart">❤️</span></span>
+        <span>© 2024 | Developed by <a class="heart" target="_blank" href="https://github.com/yamanerkam">Kam</a></span>
     </div>
     <div class="footer-right">
-        <a href="https://www.linkedin.com/in/erkamyaman35/">
+        <a target="_blank" href="https://www.linkedin.com/in/erkamyaman35/">
             <i class="pi pi-linkedin"></i>
         </a>
-        <a href="https://github.com/yamanerkam">
+        <a target="_blank" href="https://github.com/yamanerkam">
             <i class="pi pi-github"></i>
         </a>
-        <a href="mailto:erkamyaman35@gmail.com">
+        <a target="_blank" href="mailto:erkamyaman35@gmail.com">
             <i class="pi pi-envelope"></i>
         </a>
-        <a href="https://twitter.com">
+        <a target="_blank" href="https://twitter.com">
             <i class="pi pi-twitter"></i>
         </a>
     </div>
