home-page-start

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,36 +1,10 @@
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin et mattis augue. Aliquam convallis venenatis magna a
-    semper. Aliquam auctor imperdiet tempus. Etiam eget lorem ullamcorper, euismod urna in, mollis enim. Nullam commodo
-    leo eros, ut dictum ante euismod id. Maecenas dictum magna sit amet consectetur bibendum. Integer ac pellentesque
-    augue. Pellentesque vel tellus pharetra, molestie velit feugiat, tincidunt nisi. Nulla facilisi. Maecenas ac turpis
-    nec erat accumsan molestie lacinia ac risus. Duis ac lectus eu quam vulputate bibendum. Duis iaculis tempor magna,
-    ac congue erat feugiat a.
-
-    Duis eget accumsan quam, et pulvinar ex. Aliquam erat volutpat. Nullam rhoncus mi posuere arcu fermentum, nec
-    vulputate lacus dictum. Suspendisse risus augue, venenatis nec tortor quis, gravida semper tellus. Suspendisse
-    potenti. Morbi condimentum pellentesque nisi a sollicitudin. Fusce bibendum placerat ex ac interdum. Class aptent
-    taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi diam metus, accumsan in justo
-    id, sollicitudin ultrices nunc. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi laoreet neque sodales
-    arcu semper elementum. Nullam facilisis ornare elementum.
-
-    Vivamus vitae nibh ultrices nisi tincidunt mollis id sit amet neque. In volutpat leo nisi, at sodales lacus
-    venenatis ut. Cras ac ligula tincidunt, pulvinar leo vitae, imperdiet sem. In et lectus nec purus eleifend mattis.
-    Nunc congue nulla sed est mollis, quis lacinia arcu tempus. Nunc vehicula malesuada faucibus. Praesent purus velit,
-    gravida vitae magna in, lobortis facilisis arcu. Vestibulum placerat magna mattis eros lobortis, consequat euismod
-    metus vulputate. Proin non euismod nisi. Sed vel facilisis leo, non laoreet risus. Etiam dolor erat, tempor finibus
-    efficitur in, pretium eget mauris. Quisque et nibh non erat rhoncus feugiat. Nullam vitae scelerisque massa.
-    Curabitur elementum nisl quis imperdiet eleifend. Fusce tincidunt purus vel eros venenatis, ut dignissim tellus
-    vehicula.
-
-    Ut consectetur ac massa sit amet hendrerit. Nulla tempus magna non leo volutpat dapibus. Maecenas eleifend, nulla ac
-    tempor ullamcorper, sem sapien fringilla leo, a tincidunt enim tellus non justo. Aliquam interdum nibh ut magna
-    dapibus mollis. Quisque gravida non nisi efficitur placerat. Phasellus quis lectus ac risus faucibus condimentum ut
-    et ipsum. Integer fermentum neque sit amet nibh tristique, a molestie nisl laoreet. Ut sit amet sagittis arcu, non
-    maximus augue. Curabitur hendrerit erat ac ante posuere luctus.
-
-    Vivamus mattis, ante eget lacinia sollicitudin, lectus erat condimentum felis, lacinia dignissim sapien lacus sed
-    mauris. Nam dignissim odio risus, vitae ullamcorper ipsum tristique id. Sed congue consequat arcu sit amet molestie.
-    Fusce sit amet placerat mi, eget varius diam. Nam sit amet ante augue. Nulla quis ipsum sit amet dolor commodo
-    pulvinar id in dolor. Nunc vel aliquet lacus. Cras nec erat vitae nulla vestibulum faucibus at eu felis. In
-    condimentum ut nulla eget lacinia. Sed feugiat rutrum sem, sit amet pretium nulla egestas vitae. Duis bibendum massa
-    in massa dictum, nec porttitor mauris scelerisque. Integer eleifend fermentum mi ac vulputate. Aliquam at velit id
-    sem malesuada rutrum.</p>
+<div class="hero-section">
+    <div class="hero-content">
+        <h1>Engineering the digital world from end to end.</h1>
+        <h2>Erkam Yaman, <span class="highlight">Your Specialty</span></h2>
+        <p>I am a developer with X years of experience in building software. I leverage my fluency in
+            [languages/technologies] and coding skills to craft accessible, scalable, and high-performance applications.
+        </p>
+        <a href="/projects" class="btn-primary">> Check Projects</a>
+    </div>
+</div>
