--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,12 +10,9 @@
         </ngx-typed-js>
 
 
-        <p>I am a developer with X years of experience in building software. I leverage my fluency in
-            [languages/technologies] and coding skills to craft accessible, scalable, and high-performance applications.
+        <p>I am a developer with 2 years of experience in building software. I leverage my fluency in
+            English and coding skills to craft accessible, scalable, and high-performance applications.
         </p>
         <a href="/projects" class="btn-primary">> Check Projects</a>
     </div>
 </div>
-
-
-<br>
