--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
                 Projects
             </a>
 
-            <a routerLink="/useful-links">
+            <a target="_blank" href="https://github.com/yamanerkam/useful-links">
                 Useful Links
             </a>
 
