--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -3,8 +3,10 @@
         <img class="photo1" [src]="photo1" alt="Fun image 1">
 
         <h1>Hey 👋, I'm <span class="highlight">Kam</span></h1>
-        <p>I'm currently a computer engineer student at <a href="#" target="_blank">University of Yalova</a> and
-            interning as a Frontend Developer at <a href="#" target="_blank">Kolay Randevu</a>, where I'm deepening my
+        <p>I'm currently a computer engineer student at <a href="https://www.yalova.edu.tr/" target="_blank">University
+                of Yalova</a> and
+            interning as a Frontend Developer at <a href="https://www.kolayrandevu.com/" target="_blank">Kolay
+                Randevu</a>, where I'm deepening my
             Angular skills. </p>
 
 
@@ -32,7 +34,8 @@
             <li><span>📖</span> Learning about <strong class="angular"> Angular</strong>, and a bit of
                 <strong class="ts">TypeScript</strong>.
             </li>
-            <li><span>👨‍💻</span> Most of my projects are available on <a href="#" target="_blank">Github</a>.</li>
+            <li><span>👨‍💻</span> Most of my projects are available on <a href="https://github.com/yamanerkam"
+                    target="_blank">Github</a>.</li>
             <li><span>💬</span> Ping me about <strong> <span class="angular">Angular,</span> <span
                         class="react">React</span> </strong>and
                 Web Dev
