--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,1 +1,11 @@
-<p>projects works!</p>
+<div class="cards">
+    <app-project-card></app-project-card>
+    <app-project-card></app-project-card>
+    <app-project-card></app-project-card>
+    <app-project-card></app-project-card>
+    <app-project-card></app-project-card>
+    <app-project-card></app-project-card>
+    <app-project-card></app-project-card>
+    <app-project-card></app-project-card>
+    <app-project-card></app-project-card>
+</div>
