--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -1,17 +1,43 @@
-<p-card header="Advanced Card" subheader="Card Subheader" [style]="{ width: '360px' }">
-    <ng-template pTemplate="header">
-        <img alt="Card" src="https://primefaces.org/cdn/primeng/images/card-ng.jpg" />
-    </ng-template>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam
-        deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate
-        neque
-        quas!
-    </p>
-    <ng-template pTemplate="footer">
-        <div class="flex gap-3 mt-1">
-            <p-button label="Cancel" severity="secondary" class="w-full" styleClass="w-full" />
-            <p-button label="Save" class="w-full" styleClass="w-full" />
+<div class="card-container">
+    <!-- Card with image on the left -->
+    <div class="card">
+      <div class="image-section">
+        <img src="../../../assets/ss.png" alt="Halcyon Theme">
+      </div>
+      <div class="card-content left">
+        <p class="featured-project">Featured Project</p>
+        <h3 class="card-title">Halcyon Theme</h3>
+        <p class="description left">
+          A minimal, dark blue theme for VS Code, Sublime Text, Atom, iTerm, and more.
+          Available on <a href="#">Visual Studio Marketplace</a>, <a href="#">Package Control</a>,
+          <a href="#">Atom Package Manager</a>, and <a href="#">npm</a>.
+        </p>
+        <p class="tags">VS Code Sublime Text Atom iTerm2 Hyper</p>
+        <div class="icons">
+          <i class="pi pi-github"></i>
+          <i class="pi pi-external-link"></i>
         </div>
-    </ng-template>
-</p-card>
+      </div>
+    </div>
+  
+    <!-- Card with image on the right -->
+    <div class="card card-reverse">
+      <div class="card-content right">
+        <p class="featured-project">Featured Project</p>
+        <h3 class="card-title">Spotify Profile</h3>
+        <p class="description right">
+          A web app for visualizing personalized Spotify data. View your top artists, 
+          top tracks, recently played tracks, and detailed audio information about each track.
+        </p>
+        <p class="tags">React Styled Components Express Spotify API Heroku</p>
+        <div class="icons">
+          <i class="pi pi-github"></i>
+          <i class="pi pi-external-link"></i>
+        </div>
+      </div>
+      <div class="image-section">
+        <img src="../../../assets/ss.png" alt="Spotify Profile">
+      </div>
+    </div>
+  </div>
+  
