--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,1 +1,7 @@
-<p>not-found works!</p>
+<div class="not-found-container">
+    <div class="error-message">
+        <h1>404</h1>
+        <p>Oops! We can't find the page you're looking for.</p>
+        <button class="btn">> Go back to home</button>
+    </div>
+</div>
