not-found-module

--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -2,6 +2,6 @@
     <div class="error-message">
         <h1>404</h1>
         <p>Oops! We can't find the page you're looking for.</p>
-        <button class="btn">> Go back to home</button>
+        <button routerLink="/" class="btn">> Go back to home</button>
     </div>
 </div>
