last-commit-before-responsiveness

--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -3,7 +3,7 @@
 <ng-template #leftTemplate>
   <div class="card">
     <div class="image-section">
-      <img src="../../../assets/ss.png">
+      <img src="{{imgSrc}}">
     </div>
     <div class="card-content left">
       <h3 class="card-title">{{title}}</h3>
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="image-section">
-      <img src="../../../assets/ss.png" alt="Spotify Profile">
+      <img src= {{imgSrc}} >
     </div>
   </div>
 
