--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -7,6 +7,7 @@
         [tags]="project.tags"
         [githubLink]="project.githubLink"
         [liveLink]="project.liveLink"
+        [imgSrc]="project.imgSrc"
         >
     </app-project-card>
 
