navbar-night-icon-fixed

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
       </div>
     </div>
   
-    <i class="night btn pi pi-moon" style="color: #2d5f87; font-size: 1.5rem;"></i>
+    <i class="night btn pi pi-moon" style="color: #2d5f87; font-size: 1.5rem; display: inline;"></i>
   
     
     <!-- Mobile Dropdown Toggle -->
