--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -4,16 +4,19 @@
     flex-direction: row;
     font-size: 1.3em;
     justify-content: space-around;
+    align-items: center;
     position: fixed;
     z-index: 1000;
     padding-top: 30px;
-    padding-bottom: 10px;
+    padding-bottom: 30px;
     height: 30px;
     top: 0;
     left: 0;
     width: 100%;
     text-align: center !important;
 }
+
+
 
 .dropdown-icon {
     color: #3b7aa2;
@@ -27,6 +30,8 @@
     justify-content: center;
     align-items: center;
 }
+
+
 
 .navbar h1 {
     font-size: 1.75em;
