contact-me-responsive-progress

--- a/src/app/pages/contact-me/contact-me.component.html
+++ b/src/app/pages/contact-me/contact-me.component.html
@@ -1,12 +1,10 @@
 <div class="card">
-    <p-card [style]="{ border:'2px solid #3b7aa2',width: '650px',display:'flex', flexDirection:'column'}">
+    <div class="card-content" style="border: 2px solid #3b7aa2; width: 100%; max-width: 650px; display: flex; flex-direction: column;">
         <div class="header">
-            <img class="picture" alt="Card" [src]="photoURl" />
+            <img class="picture" alt="Card"  />
         </div>
         <div class="name">
-            <h1>
-                < Erkam Yaman />
-            </h1>
+            <h1>&lt; Erkam Yaman /&gt;</h1>
             <p>COMPUTER ENGINEER</p>
         </div>
         <div class="links">
@@ -25,19 +23,14 @@
         </div>
         <div class="last-paragraph">
             <p>
-                I'm always happy to collaborate on new projects and explore innovative
-                solutions. If you're looking for a dedicated software developer to bring your
-                ideas to life, let's arrange a call. Let's discuss how
+                I'm always happy to collaborate on new projects and explore innovative solutions. If you're looking for a dedicated software developer to bring your ideas to life, let's arrange a call. Let's discuss how
                 <span class="blue">we can work together to achieve your goals</span>.
             </p>
         </div>
         <div class="button-wrapper">
-
             <button>
-                <a target="_blank" style="text-decoration: none; color: inherit;"
-                    href="https://www.linkedin.com/in/erkamyaman35/">> DM me on LinkedIn</a>
+                <a target="_blank" style="text-decoration: none; color: inherit;" href="https://www.linkedin.com/in/erkamyaman35/">> DM me on LinkedIn</a>
             </button>
         </div>
-
-    </p-card>
+    </div>
 </div>
