--- a/src/app/pages/contact-me/contact-me.component.css
+++ b/src/app/pages/contact-me/contact-me.component.css
@@ -10,8 +10,6 @@
     flex-direction: column;
     justify-content: center !important;
     align-items: center !important;
-
-
 }
 
 .picture {
@@ -37,13 +35,11 @@
 }
 
 .name p {
-    margin: 0px;
+    margin: 0;
     padding: 0;
     font-size: 1.75rem;
-    font-weight: 500;
-    color: #3b7aa2;
     font-weight: bold;
-
+    color: #3b7aa2;
 }
 
 .links {
@@ -126,15 +122,76 @@ button:hover::after {
     transform: scaleX(1);
 }
 
-
 .button-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 .last-paragraph p {
     color: #6a7083;
+}
 
+/* Responsive Styles */
+@media (max-width: 768px) {
+    .card {
+        margin-top: 20px;
+        padding: 20px;
+    }
+
+    .picture {
+        width: 200px;
+        height: 200px;
+    }
+
+    .name h1 {
+        font-size: 2.5rem;
+    }
+
+    .name p {
+        font-size: 1.5rem;
+    }
+
+    .last-paragraph {
+        margin: 0 20px;
+        font-size: 1rem;
+    }
+
+    button {
+        padding: 10px 15px;
+        font-size: 1rem;
+    }
+
+    .links a i {
+        font-size: 1.5rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .picture {
+        width: 150px;
+        height: 150px;
+    }
+
+    .name h1 {
+        font-size: 2rem;
+    }
+
+    .name p {
+        font-size: 1.2rem;
+    }
+
+    .last-paragraph {
+        margin: 0 10px;
+        font-size: 0.9rem;
+    }
+
+    button {
+        padding: 8px 12px;
+        font-size: 0.9rem;
+    }
+
+    .links a i {
+        font-size: 1.2rem;
+    }
 }
